# datastore-emulator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.google  LICENSE  README.md  build.rs  client_test.py  docker-compose.yml  index.html  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: benchmark.yml  ci.yml  homebrew.yml  manual-release.yml  release.yml
Formula/: datastore-emulator.rb
benches/: query_baseline.rs
benchmark/: README.md  query_baseline_after_aggregation_index.md  query_baseline_after_commit_transaction_optimization.md  query_baseline_after_critical_index_optimizations.md  query_baseline_after_delete_return_arc.md  query_baseline_after_distinct_signature.md  query_baseline_after_distinct_u64_hash.md  query_baseline_after_distinct_value_fastpath.md  query_baseline_after_encoded_len_dedup.md  query_baseline_after_filter_optimization.md  query_baseline_after_get_entity_arc.md  query_baseline_after_index_bulk_clone.md  query_baseline_after_index_direct_traversal.md  query_baseline_after_insert_share_arc.md  query_baseline_after_key_filter.md  query_baseline_after_nested_borrow.md  query_baseline_after_path_concat.md  query_baseline_after_pr_review_fixes.md  query_baseline_after_prepared_key_filter.md  query_baseline_after_read_lock_optimization.md  query_baseline_after_sort_borrow_optimization.md  query_baseline_after_sort_unstable.md  query_baseline_after_update_replace.md  query_baseline_after_upsert_replace.md  query_baseline_before.md  query_baseline_before_commit_transaction_optimization.md  query_baseline_before_critical_index_optimizations.md  query_baseline_before_index_direct_traversal.md  query_baseline_before_read_lock_optimization.md  query_baseline_criterion.md  test_benchmark.py
dev/bench/: data.js
proto/google/datastore/import_export/: datastore_v3.proto
proto/google/datastore/v1/: datastore.proto
proto/google/type/: latlng.proto
scripts/release/: generate_homebrew_formula.sh
src/: api.rs  core.rs  database.rs  gcp.rs  import.rs  leveldb.rs  lib.rs  main.rs  operation.rs  rest.rs  rest_error.rs  state.rs
tests/: README.md  grpc_rest_parity.rs  index.yaml  pbjson_smoke.rs  query_bugs.rs  rest_payload_fidelity.rs  test_benchmark_json_output.py  test_multi_client.py  test_multi_client_compatibility.py  test_query_bugs_parity.py
