[package]
name = "datastore-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.9", features=["gzip"] }
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
byteorder = "1.5.0"
crc32c = "0.6.8"
rayon = "1.10"
tonic-health = "0.9"
axum = "0.6"
zip = "4.0.0"
bincode = { version = "2.0.1", features = ["serde"] }
base64 = "0.21"

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
once_cell = "1.21.3"
reqwest = { version = "0.11", features = ["json"] }
