[package]
name = "datastore-emulator"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
license = "MIT"
readme = "README.md"
repository = "https://github.com/guibeira/datastore-emulator"
homepage = "https://github.com/guibeira/datastore-emulator"
description = "A Google Cloud Datastore emulator written in Rust."
keywords = ["datastore", "emulator", "google-cloud", "gcp"]
categories = ["command-line-utilities", "network-programming", "database"]
include = [
    "/benches/**",
    "/src/*.rs",
    "/proto/**",
    "/build.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

[lib]
name = "datastore_emulator"
path = "src/lib.rs"
doctest = false

[dependencies]
tonic = { version = "0.9", features=["gzip"] }
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
byteorder = "1.5.0"
crc32c = "0.6.8"
rayon = "1.10"
tonic-health = "0.9"
axum = "0.6"
hyper = "0.14"
tower = { version = "0.4", features = ["util"] }
zip = "4.0.0"
bincode = { version = "2.0.1", features = ["serde"] }
base64 = "0.21"
google-cloud-storage = "0.24.0"
clap = { version = "4.5.40", features = ["derive"] }
pbjson = "0.5"
pbjson-types = "0.5"
tower-http = { version = "0.4", features = ["cors"] }

[build-dependencies]
tonic-build = "0.9"
pbjson-build = "0.5"

[dev-dependencies]
once_cell = "1.21.3"
reqwest = { version = "0.11", features = ["json"] }
criterion = { version = "0.7", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "query_baseline"
harness = false
